--- a/SodioreAPI/appsettings.json
+++ b/SodioreAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "conexaoMySql": "Server=localhost;Port=3306;Database=api_sodiore;Uid=root;Pwd=12345;charset=utf8"
+  },
   "AllowedHosts": "*"
 }
